# openLLM-Analyzer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OllamaInspector-onedir.spec  OllamaInspector.spec  README.md  THIRD_PARTY_LICENSES.md  build_exe.bat  pyproject.toml  run.bat  setup.bat  test.bat
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
packaging/: gen_icon.py  gen_manual.py
src/ollama_inspector/: __init__.py  app.py  main.py
src/ollama_inspector/analyzers/: __init__.py  architecture_analyzer.py  fine_tuning_analyzer.py  lineage_analyzer.py  metadata_tree_builder.py  metadata_utils.py  modelfile_parser.py  rag_suitability_analyzer.py
src/ollama_inspector/config/: __init__.py  settings.py
src/ollama_inspector/domain/: __init__.py  analysis_result.py  architecture.py  enums.py  errors.py  evidence.py  fine_tuning.py  lineage.py  model_summary.py  modelfile.py  rag.py
src/ollama_inspector/infrastructure/: __init__.py  file_exporter.py  gguf_reader.py  ollama_client.py  settings_store.py
src/ollama_inspector/services/: __init__.py  export_service.py  local_model_service.py  model_analysis_service.py  model_catalog_service.py
src/ollama_inspector/ui/: __init__.py  main_window.py  theme.py
src/ollama_inspector/ui/models/: __init__.py  model_list_model.py
src/ollama_inspector/ui/resources/: __init__.py
src/ollama_inspector/ui/tabs/: __init__.py  base_tab.py  fine_tuning_tab.py  lineage_tab.py  overview_tab.py  prompt_tab.py  rag_tab.py  raw_tab.py  structure_tab.py
src/ollama_inspector/ui/widgets/: __init__.py  common.py  info_form.py
src/ollama_inspector/ui/workers/: __init__.py  worker.py
src/ollama_inspector/utils/: __init__.py  logging_config.py  text.py
tests/: conftest.py
tests/fixtures/: show_embedding.json  show_llama.json  show_lora.json  tags.json
tests/ui/: test_main_window.py
tests/unit/: test_architecture_analyzer.py  test_domain_serialization.py  test_fine_tuning_analyzer.py  test_lineage_analyzer.py  test_local_model.py  test_metadata_tree.py  test_modelfile_parser.py  test_ollama_client.py  test_rag_analyzer.py  test_services.py  test_text_utils.py  test_theme.py
